<resources>
    <string name="app_name">TookBook</string>
    <string name="repeat_the_process_to_read_more_books">Repeat the process to read more books</string>
    <string name="read_books_of_your_choice_at_any_time">Read books of your choice at any time</string>
    <string name="read">Read</string>
    <string name="repeat">Repeat</string>
    <string name="rent">Rent</string>
    <string name="rent_books_easily_within_your_locality">Rent books easily within your locality</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_the_app">Welcome to the app.</string>
    <string name="let_s_begin">Let\'s begin...</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="welcome">Welcome,</string>
    <string name="password">Password</string>
    <string name="e_mail_mobile_number">E-Mail/Mobile Number</string>
    <string name="login_to_continue">Login to continue!</string>
    <string name="create_account">Create account,</string>
    <string name="sign_up_to_get_started">Sign up to get started!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="create">Create</string>
    <string name="let_s_discover">Let\'s Discover!</string>
    <string name="top_picks">Top Picks</string>
    <string name="book_name">Book Name</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="more_books_to_for">More books to look for...</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="account">Account</string>
    <string name="tracking_details"><u>Tracking Details</u></string>
    <string name="lorem_ipsum_text">Lorem ipsum dolor sit amet. Et nobis quia et vero iure et ipsam doloremque et obcaecati
    nesciunt non molestias perspiciatis qui dignissimos obcaecati quo nihil dolor.</string>
</resources>