<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green"
        tools:context=".ui.authModel.welcome.WelcomeFragment">

        <ImageView
            android:id="@+id/iv_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_login_read"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_30sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_to_the_app"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:textSize="@dimen/_22sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/let_s_begin"
                    android:textColor="@color/grey"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_70sdp">

                    <TextView
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:background="@drawable/btn_bg"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:paddingVertical="@dimen/_10sdp"
                        android:backgroundTint="@color/green"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:fontFamily="@font/nunito_sans_bold"
                        android:layout_marginEnd="@dimen/_10sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <TextView
                        android:id="@+id/btn_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:background="@drawable/btn_bg"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold"
                        android:fontFamily="@font/nunito_sans_bold"
                        android:textColor="@color/white"
                        android:paddingVertical="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:backgroundTint="@color/green"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>