<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/_15sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_margin="@dimen/_10sdp"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:id="@+id/tv_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_photo"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"
                    android:fontFamily="@font/nunito_sans_bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/iv_delete"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_delete"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@android:color/holo_red_light" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@id/tv_profile"
                    app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:id="@+id/ll_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_camera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_camera" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/camera"
                        android:layout_gravity="center"
                        android:textSize="@dimen/_12ssp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/nunito_sans_regular"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/_15sdp">

                    <ImageView
                        android:id="@+id/iv_upload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_upload" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upload"
                        android:layout_gravity="center"
                        android:textSize="@dimen/_12ssp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/nunito_sans_regular"/>
                </LinearLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
</layout>

